<resources>
    <string name="app_name">FTPmanager</string>
    <string name="connect_menu">Connect</string>
    <string name="share_menu">Share</string>
    <string name="sync_menu">Sync</string>
    <string name="file_status_menu">Status</string>
    <string name="file_manager_menu">Browser</string>
    <string name="FTP">FTP</string>
    <string name="SFTP">SFTP</string>
    <string name="connection_error">Error</string>
    <string name="connection_disconnected">Disconnected</string>
    <string name="connection_connected">Connected</string>
    <string name="connection_connecting">Connecting</string>
    <string name="add_connection">Add a connection</string>
    <string name="edit_connection">Edit a connection</string>
    <string name="wip">Work in progress</string>
    <string name="con_name_text_field">Preset name</string>
    <string name="con_ip_text_field">IP</string>
    <string name="con_username_text_field">Username</string>
    <string name="con_password_text_field">Password</string>
    <string name="con_port_text_field">Port</string>
    <string name="add">Add</string>
    <string name="save">Save changes</string>
    <string name="remove">Remove</string>
    <string name="test_button">Test button</string>
</resources>